--- a/the Control II/Lab Report/Main/references.bib
+++ b/the Control II/Lab Report/Main/references.bib
@@ -74,12 +74,12 @@
     journal = {Microprocessors in fluid engineering IMechE conference publications}
 }
 
-@UNPUBLISHED{btxdoc,
-   author = "Oren Patashnik",
-   title = "{Using BibTeX}",
-   note = "Documentation for general BibTeX users",
-   month = jan,
-   year = 1988
+@UNPUBLISHED{Nyandoro:2011,
+   author = {O. Nyandoro},
+   title = {ELEN 4016 Control II project},
+   note = {Modelling and Control of an Antilock Braking System},
+   month = mar,
+   year = 2011
    }
 
 @book{Ghita:2008,
