--- a/trunk/the Control II/Lab Report/Main/references.bib
+++ b/trunk/the Control II/Lab Report/Main/references.bib
@@ -83,7 +83,7 @@
    }
 
 @book{Ghita:2008,
-   author    = {E. Guglielmino and T. Sireteanu and C. W. Stammers and G. Ghita, M. Giuclea},
+   author    = {E. Guglielmino and T. Sireteanu and C. W. Stammers and G. Ghita and M. Giuclea},
    title     = {Semi-active suspension control: improved vehicle ride and road friendliness},
    year      = {2008},
    publisher = {Springer-Verlag London Limited},
