--- a/trunk/the Control II/Project Report/Report/Main/references.bib
+++ b/trunk/the Control II/Project Report/Report/Main/references.bib
@@ -4,12 +4,6 @@
 	note = {Last accessed: 1 July 2004}
 }
 
-@manual{Microchip,
-	title = {Microchip Technology Inc},
-	url = {http://www.microchip.com},
-	note = {Last accessed: 1 July 2004}
-}
-
 @misc{biotec,
         author = {{BIOTEC Laboratories Ltd}},
 	title = {Biotec Products in Development},
@@ -17,59 +11,31 @@
 	note = {Last accessed: 1 July 2004}
 }
 
-@misc{STimes,
-	author = {N. Soh},
-	title = {Malaria Diagnosis in Just Minutes, Instead of Hours},
-	url = {http://www.ece.nus.edu.sg/events/news/newsarchs.htm},
-	note = {Last accessed: 1 July 2004}
+@inproceedings{Alleyne:1997,
+   author    = {A. Alleyne},
+   title     = {Improved vehicle performance using combined suspension and braking forces},
+   booktitle = {Vehicle System Dynamics},
+   YEAR    = {1997},
+   VOLUME  = {27},
+   PAGES   = {235-265}
 }
 
-@misc{phppo,
-        author = {{Public Health Practice Program Office -- CDC}},
-	title = {Diagnosis of Tuberculosis Infection and Disease},
-	url = {http://www.phppo.cdc.gov/PHTN/tbmodules/modules1-5/m3/3-m-08.htm},
-	note = {Last accessed: 1 July 2004}
+@inproceedings{Pedro:2009,
+   author    = {J.O. Pedro and O.T.C. nyandoro and S. John},
+   title     = {Neural network based feedback linearisation slip control of an anti-lock braking system},
+   booktitle = {7th Asian control conference},
+   YEAR    = {2009},
+   month   = aug,
+   PAGES   = {1251-1257}
 }
 
-@manual{Prior,
-	title = {Prior Scientific},
-	url = {http://www.prior.com},
-	note = {Last accessed: 1 July 2004}
-}
-
-@misc{Ms4,
-        author = {{Applied Scientific Instrumentation}},
-	title = {Multiscan-4 Low Cost Scanning Stage},
-	url = {http://www.asiimaging.com/ms-4.html},
-	note = {Last accessed: 1 July 2004}
-}
-
-@manual{PI,
-	title = {{Physik Instrumente (PI) GmbH \& Co.}},
-	url = {http://www.pi.ws},
-	note = {Last accessed: 1 July 2004}
-}
-
-@manual{Elmulab,
-	title = {Elmulab (Pty) Ltd},
-	url = {http://www.elmulab.co.za},
-	note = {Last accessed: 1 July 2004}
-}
-
-@inproceedings{Halbach-1,
-   author    = {H. Ohsaki and H. Xueliang and Y. Tsuboi and Y. Ootani},
-   title     = {Electromagnetic Characteristics of a coreless surface motor using {H}albach permanent magnets},
-   booktitle = {4th International Symposium on Linear Drives for Industry Applications},
-   pages     = {105-108},
-   year      = {2003}
-}
-
-@inproceedings{XY-Thrust,
-   author    = {S. Inui and M. Naduka and Y. Ohira},
-   title     = {Experimental Investigation of Thrust of an X-Y LSM},
-   booktitle = {3rd International Symposium on Linear Drives for Industry Applications},
-   pages     = {181-185},
-   year      = {2001}
+@inproceedings{Thompson:1970,
+   author    = { A. Thompson},
+   title     = {Design of active suspension},
+   booktitle = {Proc. Instn. Mech. Engrs},
+   YEAR    = {1970},
+   VOLUME  = {185},
+   PAGES   = {553-563}
 }
 
 @techreport{Simon,
@@ -82,17 +48,73 @@
         number       = {03P40}
 }
 
-@inproceedings{Tubular,
-   author    = {J. Wang and G. W. Jewell and D. Howe},
-   title     = {Analysis and Design Optimisation of Slotless Tubular Permanent Magnet Linear Motors},
-   booktitle = {3rd International Symposium on Linear Drives for Industry Applications},
-   pages     = {84-89},
-   year      = {2001}
+@article{Donahue:1998,
+    author  = {Mark D. Donahue},
+    title   = {Implementation of an Active Suspension, Preview Controller for Improved Ride Comfort},
+    year    = {1998},
+    journal = {Boston University},
+    month   = apr
 }
 
-@book{Linsync,
-   author    = {Jacek F. Gieras and Zbigniew J. Piech},
-   title     = {LINEAR SYNCHRONOUS MOTORS - Transportation and Automation Systems},
-   year      = {2000},
-   publisher = {CRC Press}
+@article{Williams:1994,
+    author  = {Rodney A. Donahue},
+    title   = {Electronically Controlled Automotive Suspensions},
+    year    = {1994},
+    journal = {Computing and Control Engineering},
+    volume  = {5(3)},
+    pages   = {143-148}
 }
+
+@article{Wright:1984,
+    author  = {Peter G. Wright and Daniel A. Williams},
+    title   = {The application of active suspension to high performance road vehicles},
+    year    = {1984},
+    journal = {Microprocessors in fluid engineering IMechE conference publications}
+}
+
+@UNPUBLISHED{Nyandoro1:2011,
+   author = {O. Nyandoro},
+   title = {ELEN 4016 Control II project},
+   note = {Modelling and Control of an Antilock Braking System},
+   month = mar,
+   year = 2011
+   }
+
+@book{Nise:2004,
+   author    = {Norman S. Nise},
+   title     = {Control Systems Engineering},
+   year      = {2004},
+   publisher = {John Wiley and Sons},
+   pages     = {174-784},
+   chapter	 = {4-12},
+   edition	 = {fourth},
+   address   = {USA}
+}
+
+@inproceedings{Crolla:1988,
+   author    = {Derek A. Crolla},
+   title     = {Theoretical Comparisons of Various Active Suspension Systems in terms of Performance and Power Requirements},
+   booktitle = {Proceedings of the Institution of Mechanical Engineers Part C},
+   YEAR    = {1988},
+   VOLUME  = {420},
+   PAGES   = {1-9}
+}
+
+
+@article{Iraj:2008,
+    author  = {Iraj Hassanzadeh and Saleh Mobayen and Abbas Harifi},
+    title   = {Input-Output Feedback Linearization Cascade Controller Using Genetic Algorithm for Rotary Inverted Pendulum System},
+    year    = {2008},
+    journal = {American Journal of Applied Sciences},
+    volume  = {5(10)},
+    pages   = {1322-1328}
+}
+
+@UNPUBLISHED{Nyandoro2:2011,
+   author = {O. Nyandoro},
+   title = {Input-Output Feedback Linearisation},
+   note = {A Linearising Approach for Linear in Control
+Class of Systems},
+   month = mar,
+   year = 2011
+   }
