--- a/the Control II/Project Report/Report/Main/references.bib
+++ b/the Control II/Project Report/Report/Main/references.bib
@@ -1,16 +1,3 @@
-@manual{Olympus,
-	title = {Olympus Corporation},
-	url = {http://www.olympus.com},
-	note = {Last accessed: 1 July 2004}
-}
-
-@misc{biotec,
-        author = {{BIOTEC Laboratories Ltd}},
-	title = {Biotec Products in Development},
-	url = {http://www.biotec.com/fastptb.html},
-	note = {Last accessed: 1 July 2004}
-}
-
 @inproceedings{Alleyne:1997,
    author    = {A. Alleyne},
    title     = {Improved vehicle performance using combined suspension and braking forces},
@@ -21,7 +8,7 @@
 }
 
 @inproceedings{Pedro:2009,
-   author    = {J.O. Pedro and O.T.C. nyandoro and S. John},
+   author    = {J.O. Pedro and O.T.C. Nyandoro and S. John},
    title     = {Neural network based feedback linearisation slip control of an anti-lock braking system},
    booktitle = {7th Asian control conference},
    YEAR    = {2009},
@@ -36,16 +23,6 @@
    YEAR    = {1970},
    VOLUME  = {185},
    PAGES   = {553-563}
-}
-
-@techreport{Simon,
-	author     = {Simon Q. Davies},
-	title      = {Design, Construction and Control of a Slot-less X-Y Linear Synchronous Motor},
-	institution  = {School of Electrical and Information Engineering, University of the Witwatersrand, South Africa},
-        howpublished = {Final Year Project},
-	year			 = {2003},
-        type         = {4$^{\rm th}$ Year Project Report},
-        number       = {03P40}
 }
 
 @article{Donahue:1998,
@@ -118,3 +95,46 @@ Class of Systems},
    month = mar,
    year = 2011
    }
+   
+@article{Pable:2007,
+    author  = {M. Pable and P Seshu},
+    title   = {Design of Passive Suspensions to Reduce Actuator Control Effort},
+    year    = {2007},
+    journal = {12th IFToMM World Congress},
+    volume  = {5(10)},
+    pages   = {1005-1010}
+}  
+
+@inproceedings{Shaomin:2010,
+   author    = {L. Shaomin and F. Zhen and X Cangsu},
+   title     = {Integrated control of semi-active suspension and ABS based on sliding mode theory},
+   booktitle = {29th Chinese control conference},
+   YEAR    = {2010},
+   VOLUME  = {27},
+   PAGES   = {3214-3219}
+}
+
+@inproceedings{Tiem:2008,
+   author    = {N. Van Tiem and V Huy Hoan},
+   title     = {Synthesis of adaptive control for anti-lock braking systems based on fuzzy logic and neural network control},
+   YEAR    = {2008},
+   VOLUME  = {27},
+   PAGES   = {361-368}
+}
+
+@article{Sims:1999,
+    author  = {N. D. Sims and R. Stanway and D.J. Peel and W.A. Bullough and A.R. Johnson},
+    title   = {Controllable Viscous Damping: An Experimental Study of an Electrorheological Long-Stroke Damper Under Proportional Feedback Control},
+    year    = {1999},
+    journal = {Boston University},
+    month   = apr
+}
+
+@inproceedings{Wang:2009,
+   author    = {Wei-Yen Wang and Yi-Hsing Chien and Ming-Chang Chen and Tsu-Tian Lee},
+   title     = {Control of Uncertain Active Suspension System with Antilock
+Braking system Using Fuzzy Neural Controllers},
+   YEAR    = {2009},
+   VOLUME  = {27},
+   PAGES   = {3371-3378}
+}
